kubernetes/wisecow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
spec:
  tls:
  - hosts:
    - localhost
    secretName: wisecow-tls
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wisecow-service
            port:
              number: 4499
